k8s/overlays/oci-a1/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: transcoder-web-nic
spec:
  controller: oci.oraclecloud.com/native-ingress-controller
  parameters:
    apiGroup: ingress.oraclecloud.com
    kind: IngressClassParameters
    name: transcoder-web-lb-params
    namespace: transcoder
    scope: Namespace
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transcoder-web
  namespace: transcoder
spec:
  ingressClassName: transcoder-web-nic
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transcoder-web
                port:
                  number: 80
